@@ -1,0 +1,121 @@
+[build-system]
+requires = ["setuptools>=60.0.5", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "Nikola"
+version = "8.3.1"
+description = "A modular, fast, simple, static website and blog generator"
+readme = "README.rst"
+license = {file = "LICENSE.txt"}
+# for authors also see AUTHORS.txt file
+authors = [
+    { name = "Roberto Alsina and others", email = "info@getnikola.com" },
+]
+maintainers = [
+    { name = "Roberto Alsina", email = "roberto@getnikola.com" },
+    { name = "Chris Warrick", email = "chris@getnikola.com" }
+]
+keywords = ["website", "blog", "static"]
+classifiers = [
+    "Development Status :: 5 - Production/Stable",
+    "Environment :: Console",
+    "Environment :: Plugins",
+    "Environment :: Web Environment",
+    "Intended Audience :: End Users/Desktop",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: MacOS",
+    "Operating System :: MacOS :: MacOS X",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: OS Independent",
+    "Operating System :: POSIX",
+    "Operating System :: Unix",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Topic :: Internet",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Text Processing :: Markup"
+]
+requires-python = ">=3.8"
+dependencies = [
+    "doit>=0.33.1",
+    "Pygments>=2.4.2",
+    "Pillow>=9.1.0",
+    "python-dateutil>=2.8.2",
+    "docutils>=0.19",
+    "mako>=1.0.9",
+    "Markdown>=3.0",
+    "unidecode>=0.4.16",
+    "lxml>=4.5.2",
+    "PyRSS2Gen>=1.1",
+    "blinker>=1.3",
+    "setuptools>=60.0.5",
+    "natsort>=5.1.0",
+    "requests>=2.31.0",
+    "piexif>=1.0.3",
+    "Babel>=2.12.0",
+]
+
+[project.urls]
+homepage = "https://getnikola.com/"
+documentation = "https://getnikola.com/documentation.html"
+issues = "https://github.com/getnikola/nikola/issues"
+changelog = "https://github.com/getnikola/nikola/blob/master/CHANGES.txt"
+
+[project.optional-dependencies]
+extras = [
+    "Jinja2>=3.1.0",
+    "hsluv>=5.0.0",
+    "pyphen>=0.9.1",
+    "micawber>=0.3.0",
+    "pygal>=2.0.11",
+    "typogrify>=2.0.4",
+    "phpserialize>=1.3",
+    "notebook>=6.0.0",
+    "ipykernel>=6.21.2",
+    "ghp-import>=1.0.0",
+    "aiohttp>=3.8.6",
+    "watchdog>=2.3.0",
+    "ruamel.yaml>=0.15.98",
+    "toml>=0.9.2",
+    "html5lib>=1.0.1"
+]
+tests = [
+    "coverage>=4.5.1",
+    "pytest>=4.3.0",
+    "pytest-cov>=2.6.1",
+    "feedparser>=6.0.10",
+    "freezegun>=0.3.10",
+    "flake8>=3.7.7",
+    "pydocstyle>=6.3.0",
+]
+docs = [
+    "pyparsing>=2.0.2",
+    "Sphinx>=4.2.0",
+]
+
+[project.scripts]
+nikola = "nikola.__main__:main"
+
+[tool.setuptools.packages.find]
+exclude = ["tests", "tests.*"]
+
+[tool.setuptools.data-files]
+"share/doc/nikola" = [
+    "docs/manual.rst",
+    "docs/theming.rst",
+    "docs/extending.rst"
+]
+"share/man/man1" = ["docs/man/nikola.1.gz"]
+
+[tool.pydocstyle]
+add-ignore = ["D412", "D413"]
+
+[tool.pytest.ini_options]
+norecursedirs = [".git"]
+addopts = "--cov nikola --cov-report term-missing"
