@@ -1,16 +1,0 @@
--r requirements.txt
-Jinja2>=3.1.0
-hsluv>=5.0.0
-pyphen>=0.9.1
-micawber>=0.3.0
-pygal>=2.0.11
-typogrify>=2.0.4
-phpserialize>=1.3
-notebook>=6.0.0
-ipykernel>=6.21.2
-ghp-import>=1.0.0
-aiohttp>=3.8.6
-watchdog>=2.3.0
-ruamel.yaml>=0.15.98
-toml>=0.9.2
-html5lib>=1.0.1
