@@ -1,8 +1,0 @@
--r requirements-extras.txt
-coverage>=4.5.1
-pytest>=4.3.0
-pytest-cov>=2.6.1
-feedparser>=6.0.10
-freezegun>=0.3.10
-flake8>=3.7.7
-pydocstyle>=6.3.0
