@@ -1,16 +1,0 @@
-doit>=0.33.1
-Pygments>=2.4.2
-Pillow>=9.1.0
-python-dateutil>=2.8.2
-docutils>=0.19
-mako>=1.0.9
-Markdown>=3.0
-unidecode>=0.4.16
-lxml>=4.5.2
-PyRSS2Gen>=1.1
-blinker>=1.3
-setuptools>=60.0.5
-natsort>=5.1.0
-requests>=2.31.0
-piexif>=1.0.3
-Babel>=2.12.0
