@@ -1,10 +1,3 @@
 [flake8]
 ignore = E501,E741,W504
 exclude = nikola/data/themes/base/messages
-
-[pydocstyle]
-add-ignore = D412, D413
-
-[tool:pytest]
-norecursedirs = .git
-addopts = --cov nikola --cov-report term-missing
