@@ -9,6 +9,7 @@ Features
 * Give user control over the raw underlying template engine
   (either ``mako.lookup.TemplateLookup`` or ``jinja2.Environment``)
   via an optional ``conf.py`` method ``TEMPLATE_ENGINE_FACTORY``.
+* Switch to pyproject.toml
 
 Bugfixes
 --------
